# backend/docs/swagger.json
@@ -9,35 +9,6 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
-        "/average": {
-            "get": {
-                "description": "Fetches average for every card - agreed on flag is a must",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "head-data"
-                ],
-                "summary": "Get average per card",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/head-data": {
             "get": {
                 "description": "Fetches head data for certain candidate",
@@ -149,6 +120,35 @@
                 }
             }
         },
+        "/management/average": {
+            "get": {
+                "description": "Fetches management average for cards",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "management-average"
+                ],
+                "summary": "Get management average for cards",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.ManagementAverageDTO"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/management/summary": {
             "get": {
                 "description": "Fetches management summary for certain candidate",
@@ -156,7 +156,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "managment-summary"
+                    "management-summary"
                 ],
                 "summary": "Get management summary for candidate",
                 "parameters": [
@@ -201,6 +201,35 @@
                             "type": "array",
                             "items": {
                                 "$ref": "#/definitions/models.RatingCard"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/ratings/average": {
+            "get": {
+                "description": "Fetches average for every card - agreed on flag is a must",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "head-data"
+                ],
+                "summary": "Get average per card",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.AverageRatingDTO"
                             }
                         }
                     },
@@ -420,6 +449,20 @@
         }
     },
     "definitions": {
+        "models.AverageRatingDTO": {
+            "type": "object",
+            "properties": {
+                "NumberOfAgreedRatings": {
+                    "type": "integer"
+                },
+                "average": {
+                    "type": "number"
+                },
+                "ratingCardId": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.CandidateRatingDTO": {
             "type": "object",
             "properties": {
@@ -451,6 +494,31 @@
                     "type": "string"
                 }
             }
+        },
+        "models.CategoryEnum": {
+            "type": "string",
+            "enum": [
+                "Performance",
+                "Technical Skillset",
+                "Technical Predispositions",
+                "Sales",
+                "Recruiting",
+                "Teamwork",
+                "Coaching",
+                "Prodyna Insights",
+                "Overall"
+            ],
+            "x-enum-varnames": [
+                "CategoryPerformance",
+                "CategoryTechnicalSkillset",
+                "CategoryTechnicalPredisposition",
+                "CategorySales",
+                "CategoryRecruiting",
+                "CategoryTeamwork",
+                "CategoryCoaching",
+                "CategoryProdynaInsights",
+                "CategoryOverall"
+            ]
         },
         "models.EmployerRatingDTO": {
             "type": "object",
@@ -530,11 +598,40 @@
                 }
             }
         },
+        "models.ManagementAverageDTO": {
+            "type": "object",
+            "properties": {
+                "average": {
+                    "type": "number"
+                },
+                "category": {
+                    "$ref": "#/definitions/models.CategoryEnum"
+                }
+            }
+        },
         "models.ManagementSummaryDTO": {
             "type": "object",
             "properties": {
+                "ratings": {
+                    "description": "Array of management ratings",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ManagementSummaryRatingDTO"
+                    }
+                },
                 "userEmail": {
                     "type": "string"
+                }
+            }
+        },
+        "models.ManagementSummaryRatingDTO": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "$ref": "#/definitions/models.CategoryEnum"
+                },
+                "rating": {
+                    "type": "number"
                 }
             }
         },
