# backend/models/management_average_dtos.go
@@ -1,0 +1,6 @@
+package models
+
+type ManagementAverageDTO struct {
+	Category CategoryEnum `json:"category"`
+	Average  float64      `json:"average"`
+}
