# backend/models/management_summary_rating_dtos.go
@@ -1,0 +1,6 @@
+package models
+
+type ManagementSummaryRatingDTO struct {
+	Category CategoryEnum `json:"category"`
+	Rating   float64      `json:"rating"`
+}
